--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      .inline-style {
+        font-weight: bold;
+      }
+    </style>
   </head>
   <body>
     <h1>JavaScript Debugging Exercise</h1>
+    
 
     <button id="actionButton">Click Me</button>
     <button id="testButton">Test Button</button>
